Change html to use startup

--- a/3PlayerDiceGame/index.html
+++ b/3PlayerDiceGame/index.html
@@ -24,7 +24,7 @@
     </p>
     <button id="ButtonBet" type="button" onclick="buttonClicked()">Bet Now</button>  <br />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="index.js"></script>
+    <script src="startup.js"></script>
     <script src="game.js"></script>
 
 </body>
