Small changes so it ran on sean's computer

--- a/3PlayerDiceGame/index.html
+++ b/3PlayerDiceGame/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Dice Game</title>
     <LINK REL=StyleSheet HREF="diceGameCSS.css" TYPE="text/css"></LINK>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
 
 <body>
@@ -22,8 +23,8 @@
     <p>
         <span id="status"></span>
     </p>
-    <button id="ButtonBet" type="button" onclick="buttonClicked()">Bet Now</button>  <br />
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <button id="ButtonBet" type="button">Bet Now</button>  <br />
+    
     <script src="startup.js"></script>
     <script src="game.js"></script>
 
