--- a/3PlayerDiceGame/index.html
+++ b/3PlayerDiceGame/index.html
@@ -27,6 +27,7 @@
     
     <script src="startup.js"></script>
     <script src="game.js"></script>
+    <script src="gameflowAndInteractions.js"></script>
 
 </body>
 </html>
