--- a/3PlayerDiceGame/index.html
+++ b/3PlayerDiceGame/index.html
@@ -24,7 +24,7 @@
         <span id="status"></span>
     </p>
     <button id="ButtonBet" type="button">Bet Now</button>  <br />
-    
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="startup.js"></script>
     <script src="game.js"></script>
     <script src="gameflowAndInteractions.js"></script>
