--- a/3PlayerDiceGame/index.html
+++ b/3PlayerDiceGame/index.html
@@ -35,6 +35,7 @@
 
     <button id="ButtonBet" type="button" onclick="buttonClicked()">Bet Now</button>  <br />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="gameflowAndInteractions.js"></script>	
     <script src="startup.js"></script>
     <script src="game.js"></script>
 
