--- a/RainGame/index.html
+++ b/RainGame/index.html
@@ -12,7 +12,7 @@
         {
           border:solid 5px #0062FF;
           border-radius:8px;
-            background-color: white;
+            background-image:url(cloudy.jpeg);
         }
           .button, #message
           {
