add lib crafty.js, merge code from two version

--- a/RainGame/index.html
+++ b/RainGame/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div id="game" style="margin:0 auto;"></div>
-    <script type="text/javascript" src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
+    <script type="text/javascript" src="lib/crafty.js"></script>
     <script src="src/components.js"></script>
     <script src="src/rain.js"></script>
       <br />
