text color changed

--- a/RainGame/index.html
+++ b/RainGame/index.html
@@ -17,7 +17,7 @@
           .button, #message
           {
               text-align: center;
-              color:#CC00FF;
+              color:rgb(231, 141, 253);
           }
       </style>
   </head>
