--- a/RainGame/index.html
+++ b/RainGame/index.html
@@ -22,6 +22,7 @@
       </style>
   </head>
   <body>
+    <audio id="music" loop src="Rain.mp3" autoplay></audio>
     <div id="game" style="margin:0 auto;"></div>
     <script type="text/javascript" src="lib/crafty.js"></script>
     <script src="src/components.js"></script>
