--- a/RainGame/src/RainDropGame.html
+++ b/RainGame/src/RainDropGame.html
@@ -35,7 +35,7 @@
         .attr({x: 0, y: screenHeight - 10, w: screenWidth, h: 10})
         .color('#9D00FF');
         
-        Crafty.sprite('facio.png', {rain:[0, 0, 40, 40]});
+        Crafty.sprite('sonic.png', {rain:[0, 0, 40, 40]});
 
       var player1 = Crafty.e('Player, 2D, Canvas, rain, Solid, Twoway, Gravity, Collision')
         .attr({x: 20, y: 0, w: 30, h: 30})
