--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="lib/crafty.js"></script>
     <script src="src/components.js"></script>
     <script src="src/game.js"></script>
+    <scriptsrc="src/scenes.js"></script>
       <br />
       <div class="button">
         <input  type="button" value="pause" onclick="pause()" />
