--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -3,7 +3,13 @@
 <html>
   <head>
       <style>
-
+        #StartFirsyGame{
+        visibility: visible;
+        }
+        
+        #StartSecondGame{
+        visibility: hidden;
+        }
       </style>
   </head>
   <body>
@@ -15,6 +21,10 @@
       <br />
       <div class="button">
         <input  type="button" value="pause" onclick="pause()" />
+        //check to see if the code below will actually work in going to the next scene
+        //or if you need to call Crafty just like in the game.js file
+        <input type="button" id = "StartFirstGame" value = "Play Game 1!" onclick="Game1()">
+        <input type="button" id = "StartSecondGame" value = "Play Game 2!" onclick="Game2()">
       </div>
       <br />
   </body>
