--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -17,8 +17,10 @@
     <script type="text/javascript" src="lib/crafty.js"></script>
     <script src="src/components.js"></script>
     <script src="src/game.js"></script>
-    <scriptsrc="src/scenes.js"></script>
+    <script src="src/scenes.js"></script>
       <br />
+    <div id = "game">
+      </div>
       <div class="button">
         <input  type="button" value="pause" onclick="pause()" />
         //check to see if the code below will actually work in going to the next scene
