--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -3,6 +3,10 @@
 <html>
   <head>
       <style>
+        #game{
+          border:solid 5px #0062FF;
+          border-radius:8px;
+        }
         #StartFirsyGame{
         visibility: visible;
         }
