--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -4,7 +4,7 @@
   <head>
       <style>
         #game{
-          border:solid 5px #0062FF;
+          border:solid 5px black;
           border-radius:8px;
         }
         #StartFirsyGame{
