animation works, grid map init

--- a/CraftyGame_game2/index.html
+++ b/CraftyGame_game2/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="text/javascript" src="lib/crafty.js"></script>
-    <script src="src/components.js"></script>
-    <script src="src/rain.js"></script>
+    <link rel="stylesheet" href="style/styles.css">
   </head>
   <body>
-    <div id="game" style="margin:0 auto;"></div>
-      <br />
-      <div class="button">
-        <input  type="button" value="pause" onclick="pause()" />
-      </div>
-      <br />
-      <h3 class="button" >Score:</h3>
-    <div class="button" id="message"></div>
+    <div id="game"></div>
+    <br />
+    <script type="text/javascript" src="lib/crafty.js"></script>
+    <script src="src/components.js"></script>
+    <script src="src/scenes.js"></script>
+    <script src="src/game.js"></script>
   </body>
 </html>
