--- a/CraftyGame/index.html
+++ b/CraftyGame/index.html
@@ -1,32 +1,41 @@
+      <!DOCTYPE html>
+      <html>
+      <head>
+        <style>
+            body
+            {
+                background-image: url(images/jungle2.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            #screen
+            {
+                margin-left: 10%;
+            }
+            body, html 
+            { 
+                margin:0; 
+                padding: 0; 
+                overflow:hidden; 
+                font-family:Arial; 
+                font-size:20px 
+            }
+            #cr-stage 
+            { 
+                border:2px solid black; 
+                margin:5px auto; 
+                color:white 
+            }
+        </style>
+      </head>
+      <body>
+        <script  src="lib/crafty.js"></script>
+        <script src="src/game.js"></script>
+        <script src="src/components.js"></script>
+        <script src="src/scenes.js"></script>
 
-<!DOCTYPE html>
-<html>
-  <head>
-      <style>
-        #StartFirsyGame{
-        visibility: visible;
-        }
-        
-        #StartSecondGame{
-        visibility: hidden;
-        }
-      </style>
-  </head>
-  <body>
-    <script type="text/javascript" src="lib/crafty.js"></script>
-    <script src="src/components.js"></script>
-    <script src="src/game.js"></script>
-    <script src="src/scenes.js"></script>
-    <script>
-              window.addEventListener('load', Game.start);
-    </script
-      <div class="button">
-        <input  type="button" value="pause" onclick="pause()" />
-        //check to see if the code below will actually work in going to the next scene
-        //or if you need to call Crafty just like in the game.js file
-        <input type="button" id = "StartFirstGame" value = "Play Game 1!" onclick="Game1()">
-              <br />
-        <input type="button" id = "StartSecondGame" value = "Play Game 2!" onclick="Game2()">
-      </div>
-  </body>
-</html>
+        <script id='screen'>
+        window.addEventListener('load', Game.start);
+        </script>
+    </body>
+      </html>
