--- a/CraftyGame_game2/index.html
+++ b/CraftyGame_game2/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="style/main.css">
   </head>
   <body>
     <div id="game"></div>
+    <div id="information"></div>
     <br />
     <script type="text/javascript" src="lib/crafty.js"></script>
     <script src="src/components.js"></script>
